correct dependencies on test runs

--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -29,14 +29,17 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Setup environment
+    - name: Setup test environment
+      run: pip install .[test]
+
+    - name: Run unit tests
+      run: pytest
+
+    - name: Setup dev environment
       run: pip install .[dev]
 
     - name: Run linters
       run: flies
-
-    - name: Run unit tests
-      run: pytest
 
     # - name: Run build
     #   run: python boil.py build
