--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,7 +42,7 @@ test = [
     "pytest-cov==5.0.0",
 ]
 dev = [
-    "[flies]test",
+    "flies[test]",
     "uppd==0.3.0",
     "bouillon==2.1.0",
     "build==1.2.2",
