--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,6 +79,6 @@ asyncio_default_fixture_loop_scope = "module"
 addopts = "--cov=brundle -vv --cov-report term-missing --cov-fail-under=80"
 
 [tool.mypy]
-exclude = ["boil.py",]
+exclude = ["build", "boil.py",]
 
 [tool.setuptools_scm]
