--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ name = "brundle"
 authors = [
     {name= 'Janus Heide', email = "janusheide@gmail.com"}
 ]
-description = "Run linters in optional dependencies in pyproject.toml files."
+description = "Run various linters if they are installed."
 dynamic = ["version"]
 readme = "README.rst"
 
@@ -30,15 +30,18 @@ classifiers = [
 keywords=["maintenance", "utility"]
 
 dependencies = [
-    "packaging",
-    "tomli<3,>=2; python_version < \"3.11\"",
 ]
 
 [project.optional-dependencies]
+linters = [
+    "isort==5.13.2",
+    "licensecheck==2024.3",
+    "mypy==1.11.2",
+    "ruff==0.6.8",
+]
 test = [
+    "brundle[linters]",
     "pytest==8.3.3",
-    "pytest-aiohttp==1.0.5",
-    "pytest-asyncio==0.24.0",
     "pytest-cov==5.0.0",
 ]
 dev = [
@@ -46,10 +49,6 @@ dev = [
     "uppd==0.3.0",
     "bouillon==2.1.0",
     "build==1.2.2",
-    "isort==5.13.2",
-    "licensecheck==2024.3",
-    "mypy==1.11.2",
-    "ruff==0.6.8",
     "semver==3.0.2",
     "twine==5.1.1",
 ]
@@ -75,9 +74,9 @@ using = "PEP631:test;dev"
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
 asyncio_default_fixture_loop_scope = "module"
-addopts = "--cov=brundle -vv --cov-report term-missing --cov-fail-under=65"
+addopts = "--cov=brundle -vv --cov-report term-missing --cov-fail-under=75"
 
 [tool.mypy]
-exclude="build"
+exclude = ["build", "boil.py",]
 
 [tool.setuptools_scm]
