--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,6 +63,7 @@ brundle = "brundle.brundle:main_cli"
 
 [tool.coverage.report]
 show_missing = true
+fail_under = 75
 
 [tool.isort]
 multi_line_output = 5
@@ -72,7 +73,7 @@ include_trailing_comma = "True"
 using = "PEP631:test;dev"
 
 [tool.pytest.ini_options]
-addopts = "--cov=brundle -vv --cov-report term-missing --cov-fail-under=75"
+addopts = "--cov=brundle -vv"
 
 [tool.mypy]
 exclude = ["build"]
