--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,7 +51,9 @@ test = [
 ]
 dev = [
     "brundle[test]",
-    "bouillon[release]==2.4.0",
+    "bouillon==2.4.0",
+    "build==1.2.2",
+    "twine==5.1.1",
     "uppd==1.0.0",
 ]
 
