--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,7 +46,7 @@ linters = [
 test = [
     "brundle[linters]",
     "pytest==8.3.3",
-    "pytest-cov==5.0.0",
+    "pytest-cov<=6.0.0,>=5.0.0",
 ]
 dev = [
     "brundle[test]",
