--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ linters = [
 ]
 test = [
     "brundle[linters]",
+    "dlister==0.1.0",
     "pytest==8.3.3",
     "pytest-cov<=6.0.0,>=5.0.0",
 ]
