--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,21 +41,21 @@ dependencies = [
 linters = [
     "isort==5.13.2",
     "mypy==1.13.0",
-    "ruff==0.7.1",
+    "ruff==0.7.3",
 ]
 test = [
     "brundle[linters]",
-    "dlister==0.1.0",
+    "dlister==1.2.0",
     "pytest==8.3.3",
     "pytest-cov<=6.0.0,>=5.0.0",
 ]
 dev = [
     "brundle[test]",
-    "bouillon==2.6.0",
+    "bouillon==2.7.0",
     "build==1.2.2.post1",
     "licensecheck==2024.3",
     "twine==5.1.1",
-    "uppd==1.3.0",
+    "uppd==1.4.0",
 ]
 
 [project.urls]
@@ -78,7 +78,9 @@ include_trailing_comma = "True"
 using = "PEP631:test;dev"
 
 [tool.pytest.ini_options]
-addopts = "--cov=brundle -vv"
+addopts = "--cov=brundle"
+filterwarnings = ["error"]
+
 
 [tool.mypy]
 exclude = ["build"]
